--- a/doc/Tutorial2.RMD
+++ b/doc/Tutorial2.RMD
@@ -2,7 +2,9 @@
 title: 'Tutorial 2: EDAV using shiny'
 author: "Tian Zheng"
 date: "February 3, 2017"
-output: ioslides_presentation
+output:
+  ioslides_presentation: default
+  slidy_presentation: default
 ---
 
 ## Load the data manipulation libraries
