--- a/doc/xuanzi.Rmd
+++ b/doc/xuanzi.Rmd
@@ -44,27 +44,31 @@ hospital_info$hospital_region[hospital_info$provider_state %in% south]<-"south"
 
 Build the boxplots
 ```{r}
-p1 <- plot_ly(hospital_info[hospital_info$hospital_region == "west",], x = ~Charge, color = ~provider_state, type = "box")
-p1
+#p1 <- plot_ly(hospital_info[hospital_info$hospital_region == "west",], x = ~Charge, color = ~provider_state, type = "box")
+#p1
 
-p2 <- plot_ly(hospital_info[hospital_info$hospital_region == "midwest",], x = ~Charge, color = ~provider_state, type = "box")
-p2
+#p2 <- plot_ly(hospital_info[hospital_info$hospital_region == "midwest",], x = ~Charge, color = ~provider_state, type = "box")
+#p2
 
-p3 <- plot_ly(hospital_info[hospital_info$hospital_region == "northeast",], x = ~Charge, color = ~provider_state, type = "box")
-p3
+#p3 <- plot_ly(hospital_info[hospital_info$hospital_region == "northeast",], x = ~Charge, color = ~provider_state, type = "box")
+#p3
 
-p4 <- plot_ly(hospital_info[hospital_info$hospital_region == "south",], x = ~Charge, color = ~provider_state, type = "box")
-p4
+#p4 <- plot_ly(hospital_info[hospital_info$hospital_region == "south",], x = ~Charge, color = ~provider_state, type = "box")
+#p4
 ```
 
 Data for Map selection
 ```{r}
-readmission1 <- readmission[,c(1:9,13)]
-readmission1$Score[readmission1$Score=="Not Available"]<-0
+readmission1 <- readmission[,c(5,9,13)]
+readmission1$Score[readmission1$Score=="Not Available"]<-NA
 select<-readmission1 %>% 
   filter(Measure.Name %in% unique(readmission1$Measure.Name)[7:14]) %>%
   group_by(Measure.Name, provider_state) %>% 
-  filter(Score==max(Score))
+  na.omit()
+
+select$Score<-as.numeric(select$Score)
+
+select<-summarize(select, maxscore=max(Score),avg=round(mean(Score),1),minscore=min(Score))
 
 measure<-unique(select$Measure.Name)
 select$Measure.Name[select$Measure.Name==measure[1]]<-"chronic obstructive pulmonary disease (COPD) patients"
@@ -75,16 +79,12 @@ select$Measure.Name[select$Measure.Name==measure[5]]<-"Acute Myocardial Infarcti
 select$Measure.Name[select$Measure.Name==measure[6]]<-"CABG"
 select$Measure.Name[select$Measure.Name==measure[7]]<-"hospital-wide"
 select$Measure.Name[select$Measure.Name==measure[8]]<-"Pneumonia (PN)"
-select$Score<- as.numeric(select$Score)
-select$Score<-select$Score^3
+
+select$info<-with(select,paste(provider_state,"<br>","Maximum Score:",maxscore,"<br>","Average Score:",avg, "<br>", "Minimum Score:",minscore))
 ```
 
 Build the map
 ```{r}
-library(plotly)
-select$info<-with(select,paste(provider_name, "<br>", provider_street_address,"<br>",provider_city, "<br>", County.Name))
-# give state boundaries a white border
-l <- list(color = toRGB("white"), width = 2)
 # specify some map projection/options
 g <- list(
   scope = 'usa',
@@ -95,8 +95,8 @@ g <- list(
 
 plot_geo(select[select$Measure.Name=="CABG",], locationmode = 'USA-states') %>%
   add_trace(
-    z = ~Score,text = ~info, locations = ~provider_state,
-    color = ~Score, colors = 'Oranges'
+    z = ~avg,text = ~info, locations = ~provider_state,
+    color = ~avg, colors = 'Oranges'
   ) %>%
   layout(
     title = 'Hospital Selection',
@@ -105,9 +105,10 @@ plot_geo(select[select$Measure.Name=="CABG",], locationmode = 'USA-states') %>%
 ```
 Data for Data Table
 ```{r}
-    data1 <- readmission1
-    data1$Score<- as.numeric(data1$Score)
-    data1<-arrange(data1, desc(Score))
+ #   data1 <- readmission1
+#    data1$Score<- as.numeric(data1$Score)
+#    data1<-arrange(data1, desc(Score))
+    
 ```
 
 
